[gd_scene load_steps=12 format=4 uid="uid://cw6gt4rqpfwnq"]

[ext_resource type="Script" uid="uid://dc31c1q347cf" path="res://Scripts/Levels-UI/Levels.gd" id="1_q0bt2"]
[ext_resource type="PackedScene" uid="uid://u1d2le8te1px" path="res://Scenes/Enemies/Bug.tscn" id="2_2vfai"]
[ext_resource type="PackedScene" uid="uid://c4ceyl1flgcmv" path="res://Scenes/Enemies/virus.tscn" id="3_lci7k"]
[ext_resource type="PackedScene" uid="uid://cbiximq76w8v6" path="res://Scenes/Enemies/trojin_horse.tscn" id="4_xxsfw"]
[ext_resource type="Texture2D" uid="uid://d21vjp1o8gcgw" path="res://Assets/Drawn Assets/Tower Defence TileSet.png" id="5_fcsd4"]
[ext_resource type="PackedScene" uid="uid://bylox8p5bdg1v" path="res://Scenes/Maps and UI/UI.tscn" id="6_f2uhu"]
[ext_resource type="Script" uid="uid://bftc6pfh5ohf0" path="res://Scripts/debug_stuff.gd" id="7_l4wu4"]
[ext_resource type="PackedScene" uid="uid://bampfxtgf2u7b" path="res://Scenes/Towers/cpu.tscn" id="8_kp678"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ga3l6"]
texture = ExtResource("5_fcsd4")
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
0:4/0/terrains_peering_bit/right_side = 0
0:4/0/terrains_peering_bit/bottom_right_corner = 0
0:4/0/terrains_peering_bit/bottom_side = 0
0:4/0/custom_data_0 = true
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_right_corner = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/bottom_left_corner = 0
1:4/0/terrains_peering_bit/left_side = 0
1:4/0/custom_data_0 = true
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
2:4/0/terrains_peering_bit/bottom_side = 0
2:4/0/terrains_peering_bit/bottom_left_corner = 0
2:4/0/terrains_peering_bit/left_side = 0
2:4/0/custom_data_0 = true
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrain = 0
2:5/0/terrains_peering_bit/bottom_side = 0
2:5/0/terrains_peering_bit/bottom_left_corner = 0
2:5/0/terrains_peering_bit/left_side = 0
2:5/0/terrains_peering_bit/top_left_corner = 0
2:5/0/terrains_peering_bit/top_side = 0
2:5/0/custom_data_0 = true
2:6/0 = 0
2:6/0/terrain_set = 0
2:6/0/terrain = 0
2:6/0/terrains_peering_bit/left_side = 0
2:6/0/terrains_peering_bit/top_left_corner = 0
2:6/0/terrains_peering_bit/top_side = 0
2:6/0/custom_data_0 = true
1:6/0 = 0
1:6/0/terrain_set = 0
1:6/0/terrain = 0
1:6/0/terrains_peering_bit/right_side = 0
1:6/0/terrains_peering_bit/left_side = 0
1:6/0/terrains_peering_bit/top_left_corner = 0
1:6/0/terrains_peering_bit/top_side = 0
1:6/0/terrains_peering_bit/top_right_corner = 0
1:6/0/custom_data_0 = true
0:6/0 = 0
0:6/0/terrain_set = 0
0:6/0/terrain = 0
0:6/0/terrains_peering_bit/right_side = 0
0:6/0/terrains_peering_bit/top_side = 0
0:6/0/terrains_peering_bit/top_right_corner = 0
0:6/0/custom_data_0 = true
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrain = 0
0:5/0/terrains_peering_bit/right_side = 0
0:5/0/terrains_peering_bit/bottom_right_corner = 0
0:5/0/terrains_peering_bit/bottom_side = 0
0:5/0/terrains_peering_bit/top_side = 0
0:5/0/terrains_peering_bit/top_right_corner = 0
0:5/0/custom_data_0 = true
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrain = 0
1:5/0/terrains_peering_bit/right_side = 0
1:5/0/terrains_peering_bit/bottom_right_corner = 0
1:5/0/terrains_peering_bit/bottom_side = 0
1:5/0/terrains_peering_bit/bottom_left_corner = 0
1:5/0/terrains_peering_bit/left_side = 0
1:5/0/terrains_peering_bit/top_left_corner = 0
1:5/0/terrains_peering_bit/top_side = 0
1:5/0/terrains_peering_bit/top_right_corner = 0
1:5/0/custom_data_0 = true
3:6/0 = 0
3:6/0/terrain_set = 0
3:6/0/terrain = 0
3:6/0/terrains_peering_bit/right_side = 0
3:6/0/terrains_peering_bit/bottom_right_corner = 0
3:6/0/terrains_peering_bit/bottom_side = 0
3:6/0/terrains_peering_bit/left_side = 0
3:6/0/terrains_peering_bit/top_left_corner = 0
3:6/0/terrains_peering_bit/top_side = 0
3:6/0/custom_data_0 = true
4:6/0 = 0
4:6/0/terrain_set = 0
4:6/0/terrain = 0
4:6/0/terrains_peering_bit/right_side = 0
4:6/0/terrains_peering_bit/bottom_side = 0
4:6/0/terrains_peering_bit/bottom_left_corner = 0
4:6/0/terrains_peering_bit/left_side = 0
4:6/0/terrains_peering_bit/top_side = 0
4:6/0/terrains_peering_bit/top_right_corner = 0
4:6/0/custom_data_0 = true
4:5/0 = 0
4:5/0/terrain_set = 0
4:5/0/terrain = 0
4:5/0/terrains_peering_bit/right_side = 0
4:5/0/terrains_peering_bit/bottom_right_corner = 0
4:5/0/terrains_peering_bit/bottom_side = 0
4:5/0/terrains_peering_bit/bottom_left_corner = 0
4:5/0/terrains_peering_bit/left_side = 0
4:5/0/terrains_peering_bit/top_side = 0
4:5/0/terrains_peering_bit/top_right_corner = 0
4:5/0/custom_data_0 = true
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_right_corner = 0
4:4/0/terrains_peering_bit/top_left_corner = 0
4:4/0/terrains_peering_bit/top_side = 0
4:4/0/terrains_peering_bit/top_right_corner = 0
4:4/0/custom_data_0 = true
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/terrains_peering_bit/right_side = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/bottom_left_corner = 0
3:4/0/terrains_peering_bit/left_side = 0
3:4/0/terrains_peering_bit/top_left_corner = 0
3:4/0/terrains_peering_bit/top_side = 0
3:4/0/terrains_peering_bit/top_right_corner = 0
3:4/0/custom_data_0 = true
3:5/0 = 0
3:5/0/terrain_set = 0
3:5/0/terrain = 0
3:5/0/terrains_peering_bit/bottom_right_corner = 0
3:5/0/terrains_peering_bit/bottom_side = 0
3:5/0/terrains_peering_bit/bottom_left_corner = 0
3:5/0/terrains_peering_bit/left_side = 0
3:5/0/terrains_peering_bit/top_left_corner = 0
3:5/0/custom_data_0 = true
5:4/0 = 0
5:4/0/terrain_set = 0

[sub_resource type="TileSet" id="TileSet_pqbmv"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Basic"
terrain_set_0/terrain_0/color = Color(0.16031545, 0.46186334, 0, 1)
custom_data_layer_0/name = "EnemPath"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_ga3l6")

[sub_resource type="Curve2D" id="Curve2D_p3rt2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -4, 154, 0, 0, 0, 0, 623, 154)
}
point_count = 2

[node name="lvl_1" type="Node2D" node_paths=PackedStringArray("cpu") groups=["Game_Level"]]
script = ExtResource("1_q0bt2")
enemie_scenes = Array[PackedScene]([ExtResource("2_2vfai"), ExtResource("3_lci7k"), ExtResource("4_xxsfw")])
enems_each_wave = Array[int]([5, 8, 12, 15, 20, 25, 30, 35, 40, 45, 1])
wave_max = 11
cpu = NodePath("Cpu")

[node name="TileMapLayer" type="TileMapLayer" parent="." groups=["TileMap"]]
z_index = -5
tile_map_data = PackedByteArray("AAAnAAoAAAACAAYAAAAnAAkAAAACAAUAAAAnAAgAAAACAAQAAAAmAAoAAAABAAYAAAAmAAkAAAABAAUAAAAmAAgAAAABAAQAAAAlAAoAAAABAAYAAAAlAAkAAAABAAUAAAAlAAgAAAABAAQAAAAkAAoAAAABAAYAAAAkAAkAAAABAAUAAAAkAAgAAAABAAQAAAAjAAoAAAABAAYAAAAjAAkAAAABAAUAAAAjAAgAAAABAAQAAAAiAAoAAAABAAYAAAAiAAkAAAABAAUAAAAiAAgAAAABAAQAAAAhAAoAAAABAAYAAAAhAAkAAAABAAUAAAAhAAgAAAABAAQAAAAgAAoAAAABAAYAAAAgAAkAAAABAAUAAAAgAAgAAAABAAQAAAAfAAoAAAABAAYAAAAfAAkAAAABAAUAAAAfAAgAAAABAAQAAAAeAAoAAAABAAYAAAAeAAkAAAABAAUAAAAeAAgAAAABAAQAAAAdAAoAAAABAAYAAAAdAAkAAAABAAUAAAAdAAgAAAABAAQAAAAcAAoAAAABAAYAAAAcAAkAAAABAAUAAAAcAAgAAAABAAQAAAAbAAoAAAABAAYAAAAbAAkAAAABAAUAAAAbAAgAAAABAAQAAAAaAAoAAAABAAYAAAAaAAkAAAABAAUAAAAaAAgAAAABAAQAAAAZAAoAAAABAAYAAAAZAAkAAAABAAUAAAAZAAgAAAABAAQAAAAYAAoAAAABAAYAAAAYAAkAAAABAAUAAAAYAAgAAAABAAQAAAAXAAoAAAABAAYAAAAXAAkAAAABAAUAAAAXAAgAAAABAAQAAAAWAAoAAAABAAYAAAAWAAkAAAABAAUAAAAWAAgAAAABAAQAAAAVAAoAAAABAAYAAAAVAAkAAAABAAUAAAAVAAgAAAABAAQAAAAUAAoAAAABAAYAAAAUAAkAAAABAAUAAAAUAAgAAAABAAQAAAATAAoAAAABAAYAAAATAAkAAAABAAUAAAATAAgAAAABAAQAAAASAAoAAAABAAYAAAASAAkAAAABAAUAAAASAAgAAAABAAQAAAARAAoAAAABAAYAAAARAAkAAAABAAUAAAARAAgAAAABAAQAAAAQAAoAAAABAAYAAAAQAAkAAAABAAUAAAAQAAgAAAABAAQAAAAPAAoAAAABAAYAAAAPAAkAAAABAAUAAAAPAAgAAAABAAQAAAAOAAoAAAABAAYAAAAOAAkAAAABAAUAAAAOAAgAAAABAAQAAAANAAoAAAABAAYAAAANAAkAAAABAAUAAAANAAgAAAABAAQAAAAMAAoAAAABAAYAAAAMAAkAAAABAAUAAAAMAAgAAAABAAQAAAALAAoAAAABAAYAAAALAAkAAAABAAUAAAALAAgAAAABAAQAAAAKAAoAAAABAAYAAAAKAAkAAAABAAUAAAAKAAgAAAABAAQAAAAJAAoAAAABAAYAAAAJAAkAAAABAAUAAAAJAAgAAAABAAQAAAAIAAoAAAABAAYAAAAIAAkAAAABAAUAAAAIAAgAAAABAAQAAAAHAAoAAAABAAYAAAAHAAkAAAABAAUAAAAHAAgAAAABAAQAAAAGAAoAAAABAAYAAAAGAAkAAAABAAUAAAAGAAgAAAABAAQAAAAFAAoAAAABAAYAAAAFAAkAAAABAAUAAAAFAAgAAAABAAQAAAAEAAoAAAABAAYAAAAEAAkAAAABAAUAAAAEAAgAAAABAAQAAAADAAoAAAABAAYAAAADAAkAAAABAAUAAAADAAgAAAABAAQAAAACAAoAAAABAAYAAAACAAkAAAABAAUAAAACAAgAAAABAAQAAAABAAoAAAABAAYAAAABAAkAAAABAAUAAAABAAgAAAABAAQAAAAAAAoAAAAAAAYAAAAAAAkAAAAAAAUAAAAAAAgAAAAAAAQAAAAAAAAAAAAFAAQAAAAAAAEAAAAFAAQAAAAAAAIAAAAFAAQAAAAAAAMAAAAFAAQAAAAAAAQAAAAFAAQAAAAAAAUAAAAFAAQAAAAAAAYAAAAFAAQAAAAAAAcAAAAFAAQAAAABAAAAAAAFAAQAAAABAAEAAAAFAAQAAAABAAIAAAAFAAQAAAABAAMAAAAFAAQAAAABAAQAAAAFAAQAAAABAAUAAAAFAAQAAAABAAYAAAAFAAQAAAABAAcAAAAFAAQAAAACAAAAAAAFAAQAAAACAAEAAAAFAAQAAAACAAIAAAAFAAQAAAACAAMAAAAFAAQAAAACAAQAAAAFAAQAAAACAAUAAAAFAAQAAAACAAYAAAAFAAQAAAACAAcAAAAFAAQAAAADAAAAAAAFAAQAAAADAAEAAAAFAAQAAAADAAIAAAAFAAQAAAADAAMAAAAFAAQAAAADAAQAAAAFAAQAAAADAAUAAAAFAAQAAAADAAYAAAAFAAQAAAADAAcAAAAFAAQAAAAEAAAAAAAFAAQAAAAEAAEAAAAFAAQAAAAEAAIAAAAFAAQAAAAEAAMAAAAFAAQAAAAEAAQAAAAFAAQAAAAEAAUAAAAFAAQAAAAEAAYAAAAFAAQAAAAEAAcAAAAFAAQAAAAFAAAAAAAFAAQAAAAFAAEAAAAFAAQAAAAFAAIAAAAFAAQAAAAFAAMAAAAFAAQAAAAFAAQAAAAFAAQAAAAFAAUAAAAFAAQAAAAFAAYAAAAFAAQAAAAFAAcAAAAFAAQAAAAGAAAAAAAFAAQAAAAGAAEAAAAFAAQAAAAGAAIAAAAFAAQAAAAGAAMAAAAFAAQAAAAGAAQAAAAFAAQAAAAGAAUAAAAFAAQAAAAGAAYAAAAFAAQAAAAGAAcAAAAFAAQAAAAHAAAAAAAFAAQAAAAHAAEAAAAFAAQAAAAHAAIAAAAFAAQAAAAHAAMAAAAFAAQAAAAHAAQAAAAFAAQAAAAHAAUAAAAFAAQAAAAHAAYAAAAFAAQAAAAHAAcAAAAFAAQAAAAIAAAAAAAFAAQAAAAIAAEAAAAFAAQAAAAIAAIAAAAFAAQAAAAIAAMAAAAFAAQAAAAIAAQAAAAFAAQAAAAIAAUAAAAFAAQAAAAIAAYAAAAFAAQAAAAIAAcAAAAFAAQAAAAJAAAAAAAFAAQAAAAJAAEAAAAFAAQAAAAJAAIAAAAFAAQAAAAJAAMAAAAFAAQAAAAJAAQAAAAFAAQAAAAJAAUAAAAFAAQAAAAJAAYAAAAFAAQAAAAJAAcAAAAFAAQAAAAKAAAAAAAFAAQAAAAKAAEAAAAFAAQAAAAKAAIAAAAFAAQAAAAKAAMAAAAFAAQAAAAKAAQAAAAFAAQAAAAKAAUAAAAFAAQAAAAKAAYAAAAFAAQAAAAKAAcAAAAFAAQAAAALAAAAAAAFAAQAAAALAAEAAAAFAAQAAAALAAIAAAAFAAQAAAALAAMAAAAFAAQAAAALAAQAAAAFAAQAAAALAAUAAAAFAAQAAAALAAYAAAAFAAQAAAALAAcAAAAFAAQAAAAMAAAAAAAFAAQAAAAMAAEAAAAFAAQAAAAMAAIAAAAFAAQAAAAMAAMAAAAFAAQAAAAMAAQAAAAFAAQAAAAMAAUAAAAFAAQAAAAMAAYAAAAFAAQAAAAMAAcAAAAFAAQAAAANAAAAAAAFAAQAAAANAAEAAAAFAAQAAAANAAIAAAAFAAQAAAANAAMAAAAFAAQAAAANAAQAAAAFAAQAAAANAAUAAAAFAAQAAAANAAYAAAAFAAQAAAANAAcAAAAFAAQAAAAOAAAAAAAFAAQAAAAOAAEAAAAFAAQAAAAOAAIAAAAFAAQAAAAOAAMAAAAFAAQAAAAOAAQAAAAFAAQAAAAOAAUAAAAFAAQAAAAOAAYAAAAFAAQAAAAOAAcAAAAFAAQAAAAPAAAAAAAFAAQAAAAPAAEAAAAFAAQAAAAPAAIAAAAFAAQAAAAPAAMAAAAFAAQAAAAPAAQAAAAFAAQAAAAPAAUAAAAFAAQAAAAPAAYAAAAFAAQAAAAPAAcAAAAFAAQAAAAQAAAAAAAFAAQAAAAQAAEAAAAFAAQAAAAQAAIAAAAFAAQAAAAQAAMAAAAFAAQAAAAQAAQAAAAFAAQAAAAQAAUAAAAFAAQAAAAQAAYAAAAFAAQAAAAQAAcAAAAFAAQAAAARAAAAAAAFAAQAAAARAAEAAAAFAAQAAAARAAIAAAAFAAQAAAARAAMAAAAFAAQAAAARAAQAAAAFAAQAAAARAAUAAAAFAAQAAAARAAYAAAAFAAQAAAARAAcAAAAFAAQAAAASAAAAAAAFAAQAAAASAAEAAAAFAAQAAAASAAIAAAAFAAQAAAASAAMAAAAFAAQAAAASAAQAAAAFAAQAAAASAAUAAAAFAAQAAAASAAYAAAAFAAQAAAASAAcAAAAFAAQAAAATAAAAAAAFAAQAAAATAAEAAAAFAAQAAAATAAIAAAAFAAQAAAATAAMAAAAFAAQAAAATAAQAAAAFAAQAAAATAAUAAAAFAAQAAAATAAYAAAAFAAQAAAATAAcAAAAFAAQAAAAUAAAAAAAFAAQAAAAUAAEAAAAFAAQAAAAUAAIAAAAFAAQAAAAUAAMAAAAFAAQAAAAUAAQAAAAFAAQAAAAUAAUAAAAFAAQAAAAUAAYAAAAFAAQAAAAUAAcAAAAFAAQAAAAVAAAAAAAFAAQAAAAVAAEAAAAFAAQAAAAVAAIAAAAFAAQAAAAVAAMAAAAFAAQAAAAVAAQAAAAFAAQAAAAVAAUAAAAFAAQAAAAVAAYAAAAFAAQAAAAVAAcAAAAFAAQAAAAWAAAAAAAFAAQAAAAWAAEAAAAFAAQAAAAWAAIAAAAFAAQAAAAWAAMAAAAFAAQAAAAWAAQAAAAFAAQAAAAWAAUAAAAFAAQAAAAWAAYAAAAFAAQAAAAWAAcAAAAFAAQAAAAXAAAAAAAFAAQAAAAXAAEAAAAFAAQAAAAXAAIAAAAFAAQAAAAXAAMAAAAFAAQAAAAXAAQAAAAFAAQAAAAXAAUAAAAFAAQAAAAXAAYAAAAFAAQAAAAXAAcAAAAFAAQAAAAYAAAAAAAFAAQAAAAYAAEAAAAFAAQAAAAYAAIAAAAFAAQAAAAYAAMAAAAFAAQAAAAYAAQAAAAFAAQAAAAYAAUAAAAFAAQAAAAYAAYAAAAFAAQAAAAYAAcAAAAFAAQAAAAZAAAAAAAFAAQAAAAZAAEAAAAFAAQAAAAZAAIAAAAFAAQAAAAZAAMAAAAFAAQAAAAZAAQAAAAFAAQAAAAZAAUAAAAFAAQAAAAZAAYAAAAFAAQAAAAZAAcAAAAFAAQAAAAaAAAAAAAFAAQAAAAaAAEAAAAFAAQAAAAaAAIAAAAFAAQAAAAaAAMAAAAFAAQAAAAaAAQAAAAFAAQAAAAaAAUAAAAFAAQAAAAaAAYAAAAFAAQAAAAaAAcAAAAFAAQAAAAbAAAAAAAFAAQAAAAbAAEAAAAFAAQAAAAbAAIAAAAFAAQAAAAbAAMAAAAFAAQAAAAbAAQAAAAFAAQAAAAbAAUAAAAFAAQAAAAbAAYAAAAFAAQAAAAbAAcAAAAFAAQAAAAcAAAAAAAFAAQAAAAcAAEAAAAFAAQAAAAcAAIAAAAFAAQAAAAcAAMAAAAFAAQAAAAcAAQAAAAFAAQAAAAcAAUAAAAFAAQAAAAcAAYAAAAFAAQAAAAcAAcAAAAFAAQAAAAdAAAAAAAFAAQAAAAdAAEAAAAFAAQAAAAdAAIAAAAFAAQAAAAdAAMAAAAFAAQAAAAdAAQAAAAFAAQAAAAdAAUAAAAFAAQAAAAdAAYAAAAFAAQAAAAdAAcAAAAFAAQAAAAeAAAAAAAFAAQAAAAeAAEAAAAFAAQAAAAeAAIAAAAFAAQAAAAeAAMAAAAFAAQAAAAeAAQAAAAFAAQAAAAeAAUAAAAFAAQAAAAeAAYAAAAFAAQAAAAeAAcAAAAFAAQAAAAfAAAAAAAFAAQAAAAfAAEAAAAFAAQAAAAfAAIAAAAFAAQAAAAfAAMAAAAFAAQAAAAfAAQAAAAFAAQAAAAfAAUAAAAFAAQAAAAfAAYAAAAFAAQAAAAfAAcAAAAFAAQAAAAgAAAAAAAFAAQAAAAgAAEAAAAFAAQAAAAgAAIAAAAFAAQAAAAgAAMAAAAFAAQAAAAgAAQAAAAFAAQAAAAgAAUAAAAFAAQAAAAgAAYAAAAFAAQAAAAgAAcAAAAFAAQAAAAhAAAAAAAFAAQAAAAhAAEAAAAFAAQAAAAhAAIAAAAFAAQAAAAhAAMAAAAFAAQAAAAhAAQAAAAFAAQAAAAhAAUAAAAFAAQAAAAhAAYAAAAFAAQAAAAhAAcAAAAFAAQAAAAiAAAAAAAFAAQAAAAiAAEAAAAFAAQAAAAiAAIAAAAFAAQAAAAiAAMAAAAFAAQAAAAiAAQAAAAFAAQAAAAiAAUAAAAFAAQAAAAiAAYAAAAFAAQAAAAiAAcAAAAFAAQAAAAjAAAAAAAFAAQAAAAjAAEAAAAFAAQAAAAjAAIAAAAFAAQAAAAjAAMAAAAFAAQAAAAjAAQAAAAFAAQAAAAjAAUAAAAFAAQAAAAjAAYAAAAFAAQAAAAjAAcAAAAFAAQAAAAkAAAAAAAFAAQAAAAkAAEAAAAFAAQAAAAkAAIAAAAFAAQAAAAkAAMAAAAFAAQAAAAkAAQAAAAFAAQAAAAkAAUAAAAFAAQAAAAkAAYAAAAFAAQAAAAkAAcAAAAFAAQAAAAlAAAAAAAFAAQAAAAlAAEAAAAFAAQAAAAlAAIAAAAFAAQAAAAlAAMAAAAFAAQAAAAlAAQAAAAFAAQAAAAlAAUAAAAFAAQAAAAlAAYAAAAFAAQAAAAlAAcAAAAFAAQAAAAmAAAAAAAFAAQAAAAmAAEAAAAFAAQAAAAmAAIAAAAFAAQAAAAmAAMAAAAFAAQAAAAmAAQAAAAFAAQAAAAmAAUAAAAFAAQAAAAmAAYAAAAFAAQAAAAmAAcAAAAFAAQAAAAnAAAAAAAFAAQAAAAnAAEAAAAFAAQAAAAnAAIAAAAFAAQAAAAnAAMAAAAFAAQAAAAnAAQAAAAFAAQAAAAnAAUAAAAFAAQAAAAnAAYAAAAFAAQAAAAnAAcAAAAFAAQAAAAAAAsAAAAFAAQAAAAAAAwAAAAFAAQAAAAAAA0AAAAFAAQAAAAAAA4AAAAFAAQAAAAAAA8AAAAFAAQAAAAAABAAAAAFAAQAAAAAABEAAAAFAAQAAAAAABIAAAAFAAQAAAAAABMAAAAFAAQAAAABAAsAAAAFAAQAAAABAAwAAAAFAAQAAAABAA0AAAAFAAQAAAABAA4AAAAFAAQAAAABAA8AAAAFAAQAAAABABAAAAAFAAQAAAABABEAAAAFAAQAAAABABIAAAAFAAQAAAABABMAAAAFAAQAAAACAAsAAAAFAAQAAAACAAwAAAAFAAQAAAACAA0AAAAFAAQAAAACAA4AAAAFAAQAAAACAA8AAAAFAAQAAAACABAAAAAFAAQAAAACABEAAAAFAAQAAAACABIAAAAFAAQAAAACABMAAAAFAAQAAAADAAsAAAAFAAQAAAADAAwAAAAFAAQAAAADAA0AAAAFAAQAAAADAA4AAAAFAAQAAAADAA8AAAAFAAQAAAADABAAAAAFAAQAAAADABEAAAAFAAQAAAADABIAAAAFAAQAAAADABMAAAAFAAQAAAAEAAsAAAAFAAQAAAAEAAwAAAAFAAQAAAAEAA0AAAAFAAQAAAAEAA4AAAAFAAQAAAAEAA8AAAAFAAQAAAAEABAAAAAFAAQAAAAEABEAAAAFAAQAAAAEABIAAAAFAAQAAAAEABMAAAAFAAQAAAAFAAsAAAAFAAQAAAAFAAwAAAAFAAQAAAAFAA0AAAAFAAQAAAAFAA4AAAAFAAQAAAAFAA8AAAAFAAQAAAAFABAAAAAFAAQAAAAFABEAAAAFAAQAAAAFABIAAAAFAAQAAAAFABMAAAAFAAQAAAAGAAsAAAAFAAQAAAAGAAwAAAAFAAQAAAAGAA0AAAAFAAQAAAAGAA4AAAAFAAQAAAAGAA8AAAAFAAQAAAAGABAAAAAFAAQAAAAGABEAAAAFAAQAAAAGABIAAAAFAAQAAAAGABMAAAAFAAQAAAAHAAsAAAAFAAQAAAAHAAwAAAAFAAQAAAAHAA0AAAAFAAQAAAAHAA4AAAAFAAQAAAAHAA8AAAAFAAQAAAAHABAAAAAFAAQAAAAHABEAAAAFAAQAAAAHABIAAAAFAAQAAAAHABMAAAAFAAQAAAAIAAsAAAAFAAQAAAAIAAwAAAAFAAQAAAAIAA0AAAAFAAQAAAAIAA4AAAAFAAQAAAAIAA8AAAAFAAQAAAAIABAAAAAFAAQAAAAIABEAAAAFAAQAAAAIABIAAAAFAAQAAAAIABMAAAAFAAQAAAAJAAsAAAAFAAQAAAAJAAwAAAAFAAQAAAAJAA0AAAAFAAQAAAAJAA4AAAAFAAQAAAAJAA8AAAAFAAQAAAAJABAAAAAFAAQAAAAJABEAAAAFAAQAAAAJABIAAAAFAAQAAAAJABMAAAAFAAQAAAAKAAsAAAAFAAQAAAAKAAwAAAAFAAQAAAAKAA0AAAAFAAQAAAAKAA4AAAAFAAQAAAAKAA8AAAAFAAQAAAAKABAAAAAFAAQAAAAKABEAAAAFAAQAAAAKABIAAAAFAAQAAAAKABMAAAAFAAQAAAALAAsAAAAFAAQAAAALAAwAAAAFAAQAAAALAA0AAAAFAAQAAAALAA4AAAAFAAQAAAALAA8AAAAFAAQAAAALABAAAAAFAAQAAAALABEAAAAFAAQAAAALABIAAAAFAAQAAAALABMAAAAFAAQAAAAMAAsAAAAFAAQAAAAMAAwAAAAFAAQAAAAMAA0AAAAFAAQAAAAMAA4AAAAFAAQAAAAMAA8AAAAFAAQAAAAMABAAAAAFAAQAAAAMABEAAAAFAAQAAAAMABIAAAAFAAQAAAAMABMAAAAFAAQAAAANAAsAAAAFAAQAAAANAAwAAAAFAAQAAAANAA0AAAAFAAQAAAANAA4AAAAFAAQAAAANAA8AAAAFAAQAAAANABAAAAAFAAQAAAANABEAAAAFAAQAAAANABIAAAAFAAQAAAANABMAAAAFAAQAAAAOAAsAAAAFAAQAAAAOAAwAAAAFAAQAAAAOAA0AAAAFAAQAAAAOAA4AAAAFAAQAAAAOAA8AAAAFAAQAAAAOABAAAAAFAAQAAAAOABEAAAAFAAQAAAAOABIAAAAFAAQAAAAOABMAAAAFAAQAAAAPAAsAAAAFAAQAAAAPAAwAAAAFAAQAAAAPAA0AAAAFAAQAAAAPAA4AAAAFAAQAAAAPAA8AAAAFAAQAAAAPABAAAAAFAAQAAAAPABEAAAAFAAQAAAAPABIAAAAFAAQAAAAPABMAAAAFAAQAAAAQAAsAAAAFAAQAAAAQAAwAAAAFAAQAAAAQAA0AAAAFAAQAAAAQAA4AAAAFAAQAAAAQAA8AAAAFAAQAAAAQABAAAAAFAAQAAAAQABEAAAAFAAQAAAAQABIAAAAFAAQAAAAQABMAAAAFAAQAAAARAAsAAAAFAAQAAAARAAwAAAAFAAQAAAARAA0AAAAFAAQAAAARAA4AAAAFAAQAAAARAA8AAAAFAAQAAAARABAAAAAFAAQAAAARABEAAAAFAAQAAAARABIAAAAFAAQAAAARABMAAAAFAAQAAAASAAsAAAAFAAQAAAASAAwAAAAFAAQAAAASAA0AAAAFAAQAAAASAA4AAAAFAAQAAAASAA8AAAAFAAQAAAASABAAAAAFAAQAAAASABEAAAAFAAQAAAASABIAAAAFAAQAAAASABMAAAAFAAQAAAATAAsAAAAFAAQAAAATAAwAAAAFAAQAAAATAA0AAAAFAAQAAAATAA4AAAAFAAQAAAATAA8AAAAFAAQAAAATABAAAAAFAAQAAAATABEAAAAFAAQAAAATABIAAAAFAAQAAAATABMAAAAFAAQAAAAUAAsAAAAFAAQAAAAUAAwAAAAFAAQAAAAUAA0AAAAFAAQAAAAUAA4AAAAFAAQAAAAUAA8AAAAFAAQAAAAUABAAAAAFAAQAAAAUABEAAAAFAAQAAAAUABIAAAAFAAQAAAAUABMAAAAFAAQAAAAVAAsAAAAFAAQAAAAVAAwAAAAFAAQAAAAVAA0AAAAFAAQAAAAVAA4AAAAFAAQAAAAVAA8AAAAFAAQAAAAVABAAAAAFAAQAAAAVABEAAAAFAAQAAAAVABIAAAAFAAQAAAAVABMAAAAFAAQAAAAWAAsAAAAFAAQAAAAWAAwAAAAFAAQAAAAWAA0AAAAFAAQAAAAWAA4AAAAFAAQAAAAWAA8AAAAFAAQAAAAWABAAAAAFAAQAAAAWABEAAAAFAAQAAAAWABIAAAAFAAQAAAAWABMAAAAFAAQAAAAXAAsAAAAFAAQAAAAXAAwAAAAFAAQAAAAXAA0AAAAFAAQAAAAXAA4AAAAFAAQAAAAXAA8AAAAFAAQAAAAXABAAAAAFAAQAAAAXABEAAAAFAAQAAAAXABIAAAAFAAQAAAAXABMAAAAFAAQAAAAYAAsAAAAFAAQAAAAYAAwAAAAFAAQAAAAYAA0AAAAFAAQAAAAYAA4AAAAFAAQAAAAYAA8AAAAFAAQAAAAYABAAAAAFAAQAAAAYABEAAAAFAAQAAAAYABIAAAAFAAQAAAAYABMAAAAFAAQAAAAZAAsAAAAFAAQAAAAZAAwAAAAFAAQAAAAZAA0AAAAFAAQAAAAZAA4AAAAFAAQAAAAZAA8AAAAFAAQAAAAZABAAAAAFAAQAAAAZABEAAAAFAAQAAAAZABIAAAAFAAQAAAAZABMAAAAFAAQAAAAaAAsAAAAFAAQAAAAaAAwAAAAFAAQAAAAaAA0AAAAFAAQAAAAaAA4AAAAFAAQAAAAaAA8AAAAFAAQAAAAaABAAAAAFAAQAAAAaABEAAAAFAAQAAAAaABIAAAAFAAQAAAAaABMAAAAFAAQAAAAbAAsAAAAFAAQAAAAbAAwAAAAFAAQAAAAbAA0AAAAFAAQAAAAbAA4AAAAFAAQAAAAbAA8AAAAFAAQAAAAbABAAAAAFAAQAAAAbABEAAAAFAAQAAAAbABIAAAAFAAQAAAAbABMAAAAFAAQAAAAcAAsAAAAFAAQAAAAcAAwAAAAFAAQAAAAcAA0AAAAFAAQAAAAcAA4AAAAFAAQAAAAcAA8AAAAFAAQAAAAcABAAAAAFAAQAAAAcABEAAAAFAAQAAAAcABIAAAAFAAQAAAAcABMAAAAFAAQAAAAdAAsAAAAFAAQAAAAdAAwAAAAFAAQAAAAdAA0AAAAFAAQAAAAdAA4AAAAFAAQAAAAdAA8AAAAFAAQAAAAdABAAAAAFAAQAAAAdABEAAAAFAAQAAAAdABIAAAAFAAQAAAAdABMAAAAFAAQAAAAeAAsAAAAFAAQAAAAeAAwAAAAFAAQAAAAeAA0AAAAFAAQAAAAeAA4AAAAFAAQAAAAeAA8AAAAFAAQAAAAeABAAAAAFAAQAAAAeABEAAAAFAAQAAAAeABIAAAAFAAQAAAAeABMAAAAFAAQAAAAfAAsAAAAFAAQAAAAfAAwAAAAFAAQAAAAfAA0AAAAFAAQAAAAfAA4AAAAFAAQAAAAfAA8AAAAFAAQAAAAfABAAAAAFAAQAAAAfABEAAAAFAAQAAAAfABIAAAAFAAQAAAAfABMAAAAFAAQAAAAgAAsAAAAFAAQAAAAgAAwAAAAFAAQAAAAgAA0AAAAFAAQAAAAgAA4AAAAFAAQAAAAgAA8AAAAFAAQAAAAgABAAAAAFAAQAAAAgABEAAAAFAAQAAAAgABIAAAAFAAQAAAAgABMAAAAFAAQAAAAhAAsAAAAFAAQAAAAhAAwAAAAFAAQAAAAhAA0AAAAFAAQAAAAhAA4AAAAFAAQAAAAhAA8AAAAFAAQAAAAhABAAAAAFAAQAAAAhABEAAAAFAAQAAAAhABIAAAAFAAQAAAAhABMAAAAFAAQAAAAiAAsAAAAFAAQAAAAiAAwAAAAFAAQAAAAiAA0AAAAFAAQAAAAiAA4AAAAFAAQAAAAiAA8AAAAFAAQAAAAiABAAAAAFAAQAAAAiABEAAAAFAAQAAAAiABIAAAAFAAQAAAAiABMAAAAFAAQAAAAjAAsAAAAFAAQAAAAjAAwAAAAFAAQAAAAjAA0AAAAFAAQAAAAjAA4AAAAFAAQAAAAjAA8AAAAFAAQAAAAjABAAAAAFAAQAAAAjABEAAAAFAAQAAAAjABIAAAAFAAQAAAAjABMAAAAFAAQAAAAkAAsAAAAFAAQAAAAkAAwAAAAFAAQAAAAkAA0AAAAFAAQAAAAkAA4AAAAFAAQAAAAkAA8AAAAFAAQAAAAkABAAAAAFAAQAAAAkABEAAAAFAAQAAAAkABIAAAAFAAQAAAAkABMAAAAFAAQAAAAlAAsAAAAFAAQAAAAlAAwAAAAFAAQAAAAlAA0AAAAFAAQAAAAlAA4AAAAFAAQAAAAlAA8AAAAFAAQAAAAlABAAAAAFAAQAAAAlABEAAAAFAAQAAAAlABIAAAAFAAQAAAAlABMAAAAFAAQAAAAmAAsAAAAFAAQAAAAmAAwAAAAFAAQAAAAmAA0AAAAFAAQAAAAmAA4AAAAFAAQAAAAmAA8AAAAFAAQAAAAmABAAAAAFAAQAAAAmABEAAAAFAAQAAAAmABIAAAAFAAQAAAAmABMAAAAFAAQAAAAnAAsAAAAFAAQAAAAnAAwAAAAFAAQAAAAnAA0AAAAFAAQAAAAnAA4AAAAFAAQAAAAnAA8AAAAFAAQAAAAnABAAAAAFAAQAAAAnABEAAAAFAAQAAAAnABIAAAAFAAQAAAAnABMAAAAFAAQAAAA=")
tile_set = SubResource("TileSet_pqbmv")

[node name="UI" parent="." instance=ExtResource("6_f2uhu")]
layer = 100

[node name="Debug Stuff" type="Control" parent="." node_paths=PackedStringArray("Stage")]
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 320.0
script = ExtResource("7_l4wu4")
Stage = NodePath("..")

[node name="Button" type="Button" parent="Debug Stuff"]
layout_mode = 0
offset_left = 552.0
offset_top = 192.0
offset_right = 639.0
offset_bottom = 214.0
theme_override_font_sizes/font_size = 10
text = "Erase All Towers"

[node name="Button2" type="Button" parent="Debug Stuff"]
layout_mode = 0
offset_left = 552.0
offset_top = 168.0
offset_right = 640.0
offset_bottom = 190.0
theme_override_font_sizes/font_size = 10
text = "MONEEEEYYYY"

[node name="Button3" type="Button" parent="Debug Stuff"]
layout_mode = 0
offset_left = 552.0
offset_top = 216.0
offset_right = 640.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 10
text = "Spawn enem"

[node name="Enemy Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_p3rt2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(320, 160)
limit_enabled = false
limit_left = 1
limit_top = 0

[node name="Towers" type="Node2D" parent="."]

[node name="Bullet Container" type="Node2D" parent="."]

[node name="Timers" type="Node2D" parent="."]

[node name="EnemySpawn" type="Timer" parent="Timers"]

[node name="wave_cooldown" type="Timer" parent="Timers"]
wait_time = 5.0
one_shot = true

[node name="Cpu" parent="." instance=ExtResource("8_kp678")]
z_index = -1
offset_left = 603.0
offset_top = 132.0
offset_right = 643.0
offset_bottom = 172.0
max_health = 5.0

[connection signal="pressed" from="Debug Stuff/Button" to="Debug Stuff" method="_on_button_pressed"]
[connection signal="pressed" from="Debug Stuff/Button2" to="Debug Stuff" method="_on_button_2_pressed"]
[connection signal="pressed" from="Debug Stuff/Button3" to="Debug Stuff" method="_on_button_3_pressed"]
[connection signal="timeout" from="Timers/EnemySpawn" to="." method="_on_enemy_spawn_timeout"]
[connection signal="timeout" from="Timers/wave_cooldown" to="." method="_on_wave_cooldown_timeout"]
